--- a/index.html
+++ b/index.html
@@ -9,15 +9,43 @@
 body{
     margin:0;
     background:#000;
+    overflow:hidden;
 }
+
+/* VIDEO */
 video{
     width:100vw;
     height:100vh;
     object-fit:cover;
 }
+
+/* BARRA VERTICAL */
+.barra-vertical{
+    position:fixed;
+    top:20px;
+    left:20px;
+    width:6px;               /* grosor */
+    height:0;
+    background:#FF3131;
+    border-radius:20px;
+    z-index:10;
+    animation:desplegar 1.2s ease-out forwards;
+}
+
+/* ANIMACION */
+@keyframes desplegar{
+    from{
+        height:0;
+    }
+    to{
+        height:80vh;   /* hasta donde baja */
+    }
+}
 </style>
 </head>
 <body>
+
+<div class="barra-vertical"></div>
 
 <video autoplay muted loop playsinline>
     <source src="video.mp4" type="video/mp4">
