--- a/index.html
+++ b/index.html
@@ -5,40 +5,45 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Video</title>
 
-<!-- ICONOS (Font Awesome) -->
+<!-- ICONOS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
 body{
     margin:0;
     background:#000;
+}
+
+/* VIDEO AJUSTADO */
+.video-container{
+    height:92vh; /* un poco menos alto */
     overflow:hidden;
 }
 
-/* VIDEO */
 video{
     width:100vw;
-    height:100vh;
+    height:100%;
     object-fit:cover;
+    display:block;
 }
 
 /* BARRA VERTICAL */
 .barra-vertical{
     position:fixed;
-    top:20px;
-    left:20px;
-    width:60px;
-    height:0;
+    top:0;                /* ahora desde el top */
+    left:5px;             /* más a la izquierda */
+    width:55px;
     background:#FF3131;
-    border-radius:30px;
+    border-radius:0 0 30px 30px;
     z-index:10;
     display:flex;
     flex-direction:column;
     align-items:center;
-    padding-top:20px;
-    gap:25px;
-    overflow:hidden;
-    animation:desplegar 1.2s ease-out forwards;
+    gap:28px;
+    padding:30px 0;
+    transform:scaleY(0);
+    transform-origin:top;
+    animation:desplegar 0.8s ease-out forwards;
 }
 
 /* ICONOS */
@@ -46,23 +51,23 @@ video{
     color:#fff;
     font-size:22px;
     opacity:0;
-    transform:translateY(-20px);
-    animation:aparecer 0.6s ease forwards;
+    transform:translateY(-15px);
+    animation:aparecer 0.5s ease forwards;
 }
 
-/* RETARDOS PARA QUE APAREZCAN UNO A UNO */
-.icono:nth-child(1){ animation-delay:1.2s; }
-.icono:nth-child(2){ animation-delay:1.4s; }
-.icono:nth-child(3){ animation-delay:1.6s; }
-.icono:nth-child(4){ animation-delay:1.8s; }
+/* RETARDOS */
+.icono:nth-child(1){ animation-delay:0.8s; }
+.icono:nth-child(2){ animation-delay:1s; }
+.icono:nth-child(3){ animation-delay:1.2s; }
+.icono:nth-child(4){ animation-delay:1.4s; }
 
-/* ANIMACION BARRA */
+/* ANIMACIONES */
 @keyframes desplegar{
-    from{ height:0; }
-    to{ height:45vh; } /* menos de la mitad */
+    to{
+        transform:scaleY(1);
+    }
 }
 
-/* ANIMACION ICONOS */
 @keyframes aparecer{
     to{
         opacity:1;
@@ -80,9 +85,11 @@ video{
     <i class="fa-brands fa-tiktok icono"></i>
 </div>
 
-<video autoplay muted loop playsinline>
-    <source src="video.mp4" type="video/mp4">
-</video>
+<div class="video-container">
+    <video autoplay muted loop playsinline>
+        <source src="video.mp4" type="video/mp4">
+    </video>
+</div>
 
 <script>
 document.addEventListener("click", () => {
