--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body{
 
 /* VIDEO AJUSTADO */
 .video-container{
-    height:92vh; /* un poco menos alto */
+    height:92vh;
     overflow:hidden;
 }
 
@@ -62,7 +62,6 @@ video{
 .icono:nth-child(3){ animation-delay:1.2s; }
 .icono:nth-child(4){ animation-delay:1.4s; }
 
-/* ANIMACIONES */
 @keyframes desplegar{
     to{
         transform:scaleY(1);
@@ -80,8 +79,9 @@ video{
 <body>
 
 <div class="barra-vertical">
+    
     <!-- WHATSAPP -->
-    <a href="https://wa.me/573225443491?text=Hola,%20quiero%20empezar%20mi%20proceso%20de%20entrenamiento%20contigo.%20%C2%BFQu%C3%A9%20planes%20tienes%20disponibles%3F" target="_blank">
+    <a href="https://wa.me/573225443491?text=%2AHola,%20quiero%20empezar%20mi%20proceso%20de%20entrenamiento%20contigo.%20%C2%BFQu%C3%A9%20planes%20tienes%20disponibles%3F%2A" target="_blank">
         <i class="fa-brands fa-whatsapp icono"></i>
     </a>
 
@@ -99,6 +99,7 @@ video{
     <a href="https://www.tiktok.com/@personaltrainer187?_r=1&_t=ZS-93yjQo1689a" target="_blank">
         <i class="fa-brands fa-tiktok icono"></i>
     </a>
+
 </div>
 
 <div class="video-container">
