--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ video{
     </a>
 
     <!-- INSTAGRAM -->
-    <a href="https://www.instagram.com/team_maryo_wellness?igsh=MXBzem55cDBydTg5Mg==" target="_blank">
+    <a href="https://www.instagram.com/team_maryo_wellness?igsh=dmo3anJiNDUyYTJy" target="_blank">
         <i class="fa-brands fa-instagram icono"></i>
     </a>
 
@@ -117,3 +117,4 @@ document.addEventListener("click", () => {
 
 </body>
 </html>
+
