--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@ video{
     </a>
 
     <!-- INSTAGRAM -->
-    <a href="https://www.instagram.com/team_maryo_wellness/" target="_blank">
-        <i class="fa-brands fa-instagram icono"></i>
-    </a>
+    <a href="https://instagram.com/team_maryo_wellness" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-instagram icono"></i>
+</a>
 
     <!-- TIKTOK -->
     <a href="https://www.tiktok.com/@personaltrainer187?_r=1&_t=ZS-93yjQo1689a" target="_blank">
@@ -117,5 +117,6 @@ document.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
