--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ video{
     </a>
 
     <!-- INSTAGRAM -->
-    <a href="https://instagram.com/team_maryo_wellness" target="_blank" rel="noopener noreferrer">
+<a href="instagram://user?username=team_maryo_wellness">
     <i class="fa-brands fa-instagram icono"></i>
 </a>
 
@@ -117,6 +117,7 @@ document.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
