--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@ video{
     </a>
 
     <!-- INSTAGRAM -->
-<a href="instagram://user?username=team_maryo_wellness">
+<a href="instagram://user?username=team_maryo_wellness"
+   onclick="setTimeout(function(){
+       window.location.href='https://instagram.com/team_maryo_wellness';
+   }, 500);">
     <i class="fa-brands fa-instagram icono"></i>
 </a>
 
@@ -117,6 +120,7 @@ document.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
